--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.79.0",
+    "lucide-react": "^0.379.0",
+    "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.3",
-    "lucide-react": "^0.379.0"
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.19",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "autoprefixer": "^10.4.19"
+    "tailwindcss": "^3.4.1"
   }
 }
